--- a/arch/arm64/configs/qcom.config
+++ b/arch/arm64/configs/qcom.config
@@ -3,6 +3,12 @@
 # $ make ARCH=arm64 defconfig qcom.config
 #
 # Keep alphabetically sorted
+CONFIG_CORESIGHT_CORESIGHT_TNOC=m
+CONFIG_CORESIGHT_CTCU=m
+CONFIG_CORESIGHT_DUMMY=m
+CONFIG_CORESIGHT_SOURCE_ETM4X=m
+CONFIG_CORESIGHT_TGU=m
+CONFIG_CORESIGHT_TPDM=m
 CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
