QCLINUX: arch: arm64: configs: Enable stm components in qcom.config
Add STM configs to enable STM functions, like stm ftrace and stm
heartbeat.

Signed-off-by: Jie Gan <jie.gan@oss.qualcomm.com>

--- a/arch/arm64/configs/qcom.config
+++ b/arch/arm64/configs/qcom.config
@@ -20,6 +20,11 @@ CONFIG_KPROBES=y
 CONFIG_POWERCAP=y
 CONFIG_SCHED_DEBUG=y
 CONFIG_SCHEDSTATS=y
+CONFIG_STM_PROTO_BASIC=m
+CONFIG_STM_PROTO_SYS_T=m
+CONFIG_STM_SOURCE_CONSOLE=m
+CONFIG_STM_SOURCE_FTRACE=m
+CONFIG_STM_SOURCE_HEARTBEAT=m
 CONFIG_TRACE_MMIO_ACCESS=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_UCLAMP_TASK=y
