QCLINUX: defconfig: Enable EDAC_QCOM on qcom.config
Enable QCOM EDAC driver support for QCOM SoCs.

Signed-off-by: Komal Bajaj <komal.bajaj@oss.qualcomm.com>

--- a/arch/arm64/configs/qcom.config
+++ b/arch/arm64/configs/qcom.config
@@ -15,6 +15,7 @@ CONFIG_CPU_IDLE_THERMAL=y
 CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
+CONFIG_EDAC_QCOM=m
 CONFIG_IDLE_INJECT=y
 CONFIG_KPROBES=y
 CONFIG_POWERCAP=y
