QCLINUX: debug: Enable power management debug configs
Enabled various power management debug related kernel config options
to improve system diagnostics and aid in development and issue analysis.

Signed-off-by: Maulik Shah <maulik.shah@oss.qualcomm.com>

--- a/kernel/configs/debug.config
+++ b/kernel/configs/debug.config
@@ -144,6 +144,9 @@ CONFIG_MAC80211_DEBUGFS=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_PREEMPT_TRACER=y
 CONFIG_PREEMPTIRQ_TRACEPOINTS=y
+CONFIG_PM_ADVANCED_DEBUG=y
+CONFIG_PM_DEBUG=y
+CONFIG_PM_SLEEP_DEBUG=y
 CONFIG_SCHED_TRACER=y
 CONFIG_STACK_TRACER=y
 CONFIG_TRACEPOINTS=y
